--- a/summerClothes.html
+++ b/summerClothes.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Summer Clothes For Men & Women Product Shoping Store In India | ...</title>
-    
+    <link rel="stylesheet" href="CSS/summerClothes.css">
+    <script src="javaScript/summerClothes.js"></script>
 </head>
 <body>
-    
+    <div id="globalProducts">
+
+    </div>
 </body>
 </html>
