--- a/summerClothes.html
+++ b/summerClothes.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Summer Clothes For Men & Women Product Shoping Store In India | ...</title>
     <link rel="stylesheet" href="CSS/summerClothes.css">
-    <script src="javaScript/summerClothes.js"></script>
 </head>
 <body>
     <div id="globalProducts">
 
     </div>
+
+    <!-- Java_Script_Files -->
+    <script src="javaScript/summerClothes.js"></script>
 </body>
 </html>
