--- a/summerClothes.html
+++ b/summerClothes.html
@@ -21,8 +21,8 @@
             </select>
         </div>
         <div id="byCountry" class="filterBox">
-            <label for="price">IMPORTED FROM</label><br>
-            <select name="price" id="price">
+            <label for="country">IMPORTED FROM</label><br>
+            <select name="country" id="country">
                 <option value="any">Any Country</option>
                 <option value="uk">Imported from UK</option>
                 <option value="usa">Imported from USA</option>
@@ -31,8 +31,8 @@
             </select>
         </div>
         <div id="byDelivery" class="filterBox">
-            <label for="price">DELIVERY TIME</label><br>
-            <select name="price" id="price">
+            <label for="delivery">DELIVERY TIME</label><br>
+            <select name="delivery" id="delivery">
                 <option value="any">Any Price</option>
                 <option value="sameDay">INR 0-2000</option>
                 <option value="2day">INR 2001-5000</option>
@@ -63,7 +63,7 @@
     </div>
      <!-- horizontal line -->
      <div class="hrLine"></div>
-     
+
     <!-- Java_Script_Files -->
     <script src="javaScript/summerClothes.js"></script>
 </body>
