--- a/shivam.html
+++ b/shivam.html
@@ -13,7 +13,7 @@
             <div class="footer1">
                 <div class="help" >
                 <h3 class="textfotter"><a href="swan.html">Need Help ?</a></h3>
-                <p >We'd love to help you out!
+                <p >We'd love to Help you out!
                     support@desertcart.com</p>
                 </div>
             </div>
