--- a/shivam.html
+++ b/shivam.html
@@ -87,7 +87,7 @@
             <div class="footerfold2">
                 <div id="social">
                 <div>
-                <p>Desertcart provides a seamless and secure shopping platform with 100<br> million+ products from around the globe delivered to your door</p>
+                <p>Desertcart provides a seamless and secure Shopping platform with 100<br> million+ products from around the globe delivered to your door</p>
                 </div>
                 <div>
                     <a href="https://itunes.apple.com/us/app/desertcart/id1399518358"><img id="icons" alt="desertcart ios app download" src="https://cdn.desertcart.com/static/media/desertcart-ios-app.8aadfde5.png"></a>
