--- a/productReview.html
+++ b/productReview.html
@@ -20,14 +20,55 @@
                 
             </div>
             <div class="productChart">
+                <!-- size picker -->
                     <p><strong>Size</strong></p>
-                    <div class="sizeColorBox">
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                    <div class="sizeColorWrapper">
+                        <div class="sizeColorBox">
+                            <img src="https://img.icons8.com/external-becris-lineal-becris/24/000000/external-left-arrow-mintab-for-ios-becris-lineal-becris.png"/>
+                        </div>
+                        <div class="sizeColorBox">
+                            <p>Medium</p>
+                        </div>
+                        <div class="sizeColorBox">
+                            <p>Small</p>
+                        </div>
+                        <div class="sizeColorBox">
+                            <p>X-Large</p>
+                        </div>
+                        <div class="sizeColorBox">
+                            <p>XX-Large</p>
+                        </div>
+                        <div class="sizeColorBox">
+                            <img src="https://img.icons8.com/ios/30/000000/more-than.png"/>
+                        </div>
+                    </div>
+
+                    <!-- color picker -->
+                    <p><strong>Color</strong></p>
+                    <div class="sizeColorWrapper">
+                        <div class="sizeColorBox">
+                            <img src="https://img.icons8.com/external-becris-lineal-becris/24/000000/external-left-arrow-mintab-for-ios-becris-lineal-becris.png"/>
+                        </div>
+                        <div class="sizeColorBox">
+                            <p>Oxford Gray</p>
+                        </div>
+                        <div class="sizeColorBox">
+                            <p>Oxford web</p>
+                        </div>
+                        <div class="sizeColorBox">
+                            <p>Ultra Marine</p>
+                        </div>
+                        <div class="sizeColorBox">
+                            <p>Light Brown</p>
+                        </div>
+                        <div class="sizeColorBox">
+                            <img src="https://img.icons8.com/ios/30/000000/more-than.png"/>
+                        </div>
+                    </div>
+
+                    <!-- addToCart button -->
+                    <div class="addToCartBtn">
+                        <button>Add to Cart</button>
                     </div>
             </div>
         </div>
