signin and signup pages are done with all functionality

--- a/shivam.html
+++ b/shivam.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="desertcart.css">
+    <link rel="stylesheet" href="shivam.css">
 </head>
 <body>
     <div class="footer">
         <div class="box">
             <div class="footer1">
                 <div class="help" >
-                <h3 class="textfotter"><a href="swan.html">Need Help ?</a></h3>
+                <h3 class="textfotter"><a href="">Need Help ?</a></h3>
                 <p >We'd love to Help you out!
                     support@desertcart.com</p>
                 </div>
