--- a/perfumeryHer.html
+++ b/perfumeryHer.html
@@ -10,9 +10,9 @@
         margin-left: 30px;
         display: grid;
       }
-      #products > div {
+      /* #products > div {
         
-      }
+      } */
       #products > div:hover {
         box-shadow: 2px 2px 2px 2px #EEEEEE;
         /* opacity: 1.0; */
