--- a/productReview.html
+++ b/productReview.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clothes</title>
-    <link rel="stylesheet" href="/CSS/productReview.css">
+    <link rel="stylesheet" href="CSS/productReview.css">
 
 </head>
 <body>
@@ -160,4 +160,4 @@
 </body>
 </html>
 
-<script src="/javaScript/productReview.js"></script>
+<script src="javaScript/productReview.js"></script>
