background and font changed

--- a/shivam.html
+++ b/shivam.html
@@ -28,7 +28,7 @@
             </div>
             <div class="footer1">
                 <div class="help">
-                    <img src="https://cdn-icons-png.flaticon.com/128/181/181506.png"/>
+                    <img src="https://cdn-icons-png.flaticon.com/128/1381/1381635.png"/>
                 </div>
                 <div class="help" >
                 <h3 class="textfotter"><a href="">Chat Support</a></h3>
@@ -37,7 +37,7 @@
             </div>
             <div class="footer1">
                 <div class="help">
-                    <img src="https://cdn-icons-png.flaticon.com/128/88/88264.png"/>
+                    <img src="https://cdn-icons-png.flaticon.com/128/739/739286.png"/>
                 </div>
                 <div class="help" >
                 <h3 class="textfotter"><a href="">FAQ</a></h3>
@@ -45,7 +45,7 @@
                 </div>
             </div>
         </div>
-        <div class="box2">
+        <div class="box2" >
             <div class="footerfold">
             <div class = "subbox">
                 <div><p> Track Order</p></div>
@@ -94,7 +94,7 @@
                     <a href="https://play.google.com/store/apps/details?id=com.desertcartnative"><img  id="icons" alt="desertcart ios app download" src="https://cdn.desertcart.com/static/media/desertcart-android-app.bc11e461.png"></a>
                 </div>
                 <div>
-                    <img  src="https://img-premium.flaticon.com/png/128/739/premium/739237.png?token=exp=1632894201~hmac=0a2fb199fdef295ccba463cd9f7e5468"/>
+                    <a href="https://www.facebook.com/desertcart"><img alt="desertcart facebook" src="https://cdn-icons-png.flaticon.com/128/1384/1384037.png"></a>
                     <img  src="https://cdn-icons-png.flaticon.com/128/1384/1384031.png"/>
                     <img src="https://cdn-icons-png.flaticon.com/128/733/733635.png"/>
                 </div>
