--- a/payment.html
+++ b/payment.html
@@ -39,6 +39,7 @@
         function paye(e){
             e.preventDefault();
             if (confirm("Do You Want to Confirm")) {
+                location.href ="shivam.html"
             } 
             document.getElementById("myForm")
         }
