--- a/signinfirst.html
+++ b/signinfirst.html
@@ -9,6 +9,7 @@
 </head>
 <body><div>
             <div class="signi">
+                <img src="https://cdn.desertcart.com/static/media/logo.5821c90d.png"/>
         <form onsubmit="signin(event)" id="myForm" action="">
             <h1>Sign In</h1>
             <div>
