--- a/signin.html
+++ b/signin.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="signin.css">
 </head>
 <body><div class="signi">
+    
             <div>
+                
         <form onsubmit="signin(event)" id="myForm" action="">
+            <img src="https://cdn.desertcart.com/static/media/logo.5821c90d.png"/>
             <h1>Sign In</h1>
             <div>
             <input type="text" id="email" placeholder="Email" required/>
