--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Online Shopping Store in India</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/footer.css">
+    <!-- <link rel="stylesheet" href="css/cart.css"> -->
+    <!-- <link rel="stylesheet" href="CSS/creataccount.css"> -->
+    <!-- <link rel="stylesheet" href="CSS/productReview.css"> -->
+    <!-- <link rel="stylesheet" href="css/signin.css"> -->
+    <!-- <link rel="stylesheet" href="css/summerClothes.css"> -->
 </head>
 
 <body>
@@ -40,7 +45,7 @@
             </div>
         </div>
         <!-- Body -->
-        <div id="header2">
+        <div id="header2_1">
             <div>
                 <p>Find 100M+ products</p>
                 <input type="text" placeholder="Search for any product..." name="" id="">
@@ -153,3 +158,7 @@
 </body>
 </html>
 <script src="javaScript/index.js"></script>
+<script src="javaScript/cart.js"></script>
+<script src="javaScript/creataccount.js"></script>
+<script src="javaScript/productReview.js"></script>
+<script src="javaScript/summerClothes.js"></script>
