--- a/summerClothes.html
+++ b/summerClothes.html
@@ -6,9 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Summer Clothes For Men & Women Product Shoping Store In India | ...</title>
-    <link rel="stylesheet" href="CSS/summerClothes.css">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="CSS/footer.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/cart.css">
+    <link rel="stylesheet" href="CSS/creataccount.css">
+    <link rel="stylesheet" href="CSS/productReview.css">
+    <link rel="stylesheet" href="css/signin.css">
+    <link rel="stylesheet" href="css/summerClothes.css">
 </head>
 <body>
     <!-- nav -->
@@ -193,4 +197,8 @@
 </html>
 
 <!-- Java_Script_Files -->
+<script src="javaScript/index.js"></script>
+<script src="javaScript/cart.js"></script>
+<script src="javaScript/creataccount.js"></script>
+<script src="javaScript/productReview.js"></script>
 <script src="javaScript/summerClothes.js"></script>
