--- a/productReview.html
+++ b/productReview.html
@@ -9,11 +9,11 @@
     <title>Clothes</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/cart.css">
-    <link rel="stylesheet" href="CSS/creataccount.css">
+    <!-- <link rel="stylesheet" href="css/cart.css"> -->
+    <!-- <link rel="stylesheet" href="CSS/creataccount.css"> -->
     <link rel="stylesheet" href="CSS/productReview.css">
-    <link rel="stylesheet" href="css/signin.css">
-    <link rel="stylesheet" href="css/summerClothes.css">
+    <!-- <link rel="stylesheet" href="css/signin.css"> -->
+    <!-- <link rel="stylesheet" href="css/summerClothes.css"> -->
 </head>
 <body>
     <!-- Nav -->
