--- a/summerClothes.html
+++ b/summerClothes.html
@@ -8,10 +8,10 @@
     <title>Online Summer Clothes For Men & Women Product Shoping Store In India | ...</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/cart.css">
-    <link rel="stylesheet" href="CSS/creataccount.css">
-    <link rel="stylesheet" href="CSS/productReview.css">
-    <link rel="stylesheet" href="css/signin.css">
+    <!-- <link rel="stylesheet" href="css/cart.css"> -->
+    <!-- <link rel="stylesheet" href="CSS/creataccount.css"> -->
+    <!-- <link rel="stylesheet" href="CSS/productReview.css"> -->
+    <!-- <link rel="stylesheet" href="css/signin.css"> -->
     <link rel="stylesheet" href="css/summerClothes.css">
 </head>
 <body>
