--- a/cart.html
+++ b/cart.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/cart.css">
-    <link rel="stylesheet" href="CSS/creataccount.css">
-    <link rel="stylesheet" href="CSS/productReview.css">
-    <link rel="stylesheet" href="css/signin.css">
-    <link rel="stylesheet" href="css/summerClothes.css">
+    <!-- <link rel="stylesheet" href="CSS/creataccount.css"> -->
+    <!-- <link rel="stylesheet" href="CSS/productReview.css"> -->
+    <!-- <link rel="stylesheet" href="css/signin.css"> -->
+    <!-- <link rel="stylesheet" href="css/summerClothes.css"> -->
 </head>
 <body>
     <!-- Nav -->
