perfume_page_linked

--- a/perfumeMenAndWomen.html
+++ b/perfumeMenAndWomen.html
@@ -1,18 +1,13 @@
-<!-- Vikas Kumar - fw12_132 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Summer Clothes For Men & Women Product Shoping Store In India | ...</title>
+    <title>Perfumes</title>
+    <link rel="stylesheet" href="CSS/summerClothes.css">
     <link rel="stylesheet" href="CSS/index.css">
     <link rel="stylesheet" href="CSS/footer.css">
-    <!-- <link rel="stylesheet" href="css/cart.css"> -->
-    <!-- <link rel="stylesheet" href="CSS/creataccount.css"> -->
-    <!-- <link rel="stylesheet" href="CSS/productReview.css"> -->
-    <!-- <link rel="stylesheet" href="css/signin.css"> -->
-    <link rel="stylesheet" href="CSS/summerClothes.css">
 </head>
 <body>
     <!-- nav -->
@@ -42,8 +37,8 @@
             <img src="https://img.icons8.com/ios/48/000000/shopping-cart.png" class="headerIcon" onclick="goToCart()" id="cart">
         </div>
     </div>
-    <!-- filter section -->
-    <div id="filter">
+     <!-- filter section -->
+     <div id="filter">
         <div id="byPrice" class="filterBox">
             <label for="price">PRICE</label><br>
             <select name="price" id="price">
@@ -80,7 +75,7 @@
     <div class="hrLine"></div>
     <!-- All product section -->
     <div class="sectionHead">
-        <h1>Online Summer Clothes For Men Shopping Store</h1>
+        <h1>Online Perfumes For Him Shopping Store</h1>
     </div>
     <div class="globalProducts" id="menContainer">
         
@@ -90,14 +85,13 @@
     <div class="hrLine"></div>
     <!-- All product section -->
     <div class="sectionHead">
-        <h1>Online Summer Dresses For Women Shopping Store</h1>
+        <h1>Online Perfumes For Her Shopping Store</h1>
     </div>
     <div class="globalProducts" id="womenContainer">
         
     </div>
      <!-- horizontal line -->
      <div class="hrLine"></div>
-
      <!-- Footer -->
      <div class="footer">
         <div class="box">
@@ -196,7 +190,7 @@
 </body>
 </html>
 
-<!-- Java_Script_Files -->
+<script src="javaScript/perfumeMenAndWomen.js"></script>
 <script src="javaScript/index.js"></script>
 <script src="javaScript/cart.js"></script>
 <script src="javaScript/creataccount.js"></script>
