web_site_complted

--- a/cart.html
+++ b/cart.html
@@ -46,7 +46,7 @@
     <div id="globalContainer">
         <div id="productDetails">
             <div>
-                <p>Estimated Delivery Oct 13 to Oct 21</p>
+                <!-- <p>Estimated Delivery Oct 13 to Oct 21</p> -->
             </div>
             <!-- <div id="product"> -->
 
