--- a/creataccount.html
+++ b/creataccount.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Account</title>
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="CSS/index.css">
+    <link rel="stylesheet" href="CSS/footer.css">
     <!-- <link rel="stylesheet" href="css/cart.css"> -->
     <link rel="stylesheet" href="CSS/creataccount.css">
     <!-- <link rel="stylesheet" href="CSS/productReview.css"> -->
