--- a/signin.html
+++ b/signin.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign in</title>
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="CSS/index.css">
+    <link rel="stylesheet" href="CSS/footer.css">
     <!-- <link rel="stylesheet" href="css/cart.css"> -->
     <!-- <link rel="stylesheet" href="CSS/creataccount.css"> -->
     <!-- <link rel="stylesheet" href="CSS/productReview.css"> -->
-    <link rel="stylesheet" href="css/signin.css">
+    <link rel="stylesheet" href="CSS/signin.css">
     <!-- <link rel="stylesheet" href="css/summerClothes.css"> -->
 </head>
 <body>
