--- a/creataccount.html
+++ b/creataccount.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="CSS/creataccount.css">
     <!-- <link rel="stylesheet" href="CSS/productReview.css"> -->
     <!-- <link rel="stylesheet" href="css/signin.css"> -->
-    <!-- <link rel="stylesheet" href="css/summerClothes.css"> -->
+    
 </head>
 <body><div>
      <!-- Nav -->
@@ -53,7 +53,7 @@
             </div>
             <div class="submitbtn">
                 <div>
-                    <h5>Want to enter your password insted ?<br> <a href="signin.html">Try our legacy signin</a></h5>
+                    <h5>Want to enter your Password insted ?<br> <a href="signin.html">Try our legacy signin</a></h5>
                 </div>
                 <input type="submit" class="btn" value="Sign up" ></input>
             </div> 
