Home_page_resposivenes

--- a/index.html
+++ b/index.html
@@ -46,9 +46,12 @@
         </div>
         <!-- Body -->
         <div id="header2_1">
-            <div>
+            <div id="searchBox">
                 <p>Find 100M+ products</p>
                 <input type="text" placeholder="Search for any product..." name="" id="">
+            </div>
+            <div id="header2_1_tag">
+                
             </div>
         </div>
         <div id="slideshow"></div>
