filter functionality updated

--- a/summerClothes.html
+++ b/summerClothes.html
@@ -8,10 +8,6 @@
     <title>Online Summer Clothes For Men & Women Product Shoping Store In India | ...</title>
     <link rel="stylesheet" href="CSS/index.css">
     <link rel="stylesheet" href="CSS/footer.css">
-    <!-- <link rel="stylesheet" href="css/cart.css"> -->
-    <!-- <link rel="stylesheet" href="CSS/creataccount.css"> -->
-    <!-- <link rel="stylesheet" href="CSS/productReview.css"> -->
-    <!-- <link rel="stylesheet" href="css/signin.css"> -->
     <link rel="stylesheet" href="CSS/summerClothes.css">
 </head>
 <body>
@@ -68,13 +64,13 @@
             </select>
         </div>
         <div id="byDelivery" class="filterBox">
-            <label for="delivery">DELIVERY TIME</label><br>
-            <select name="delivery" id="delivery">
-                <option value="any">Any Price</option>
-                <option value="sameDay">INR 0-2000</option>
-                <option value="2day">INR 2001-5000</option>
-                <option value="3to5Days">INR 5001-10,000</option>
-                <option value=">5to8Days">INR 10,000+</option>
+            <label for="rating">RATING</label><br>
+            <select name="rating" id="rating">
+                <option value="any">Any Rating</option>
+                <option value="High-Low">High-Low</option>
+                <option value="Low-High">Low-High</option>
+                <option value="4to5">4+ out of 5</option>
+                <!-- <option value=">5to8Days"></option> -->
             </select>
         </div>
     </div>
@@ -102,7 +98,7 @@
      <div class="hrLine"></div>
 
       <!-- footer -->
-    <div id="footer">
+    <div id="footer" style="margin-top: 55px;">
         <!-- Top horizontal box -->
         <div id="footerTopBox">
             <div class="childTopFooter">
