--- a/perfumeMenAndWomen.html
+++ b/perfumeMenAndWomen.html
@@ -40,7 +40,39 @@
             <img src="https://img.icons8.com/ios/48/000000/shopping-cart.png" class="headerIcon" onclick="goToCart()" id="cart">
         </div>
     </div>
-
+    <!-- filter section -->
+    <div id="filter">
+        <div id="byPrice" class="filterBox">
+            <label for="price">PRICE</label><br>
+            <select name="price" id="price">
+                <option value="any">Any Price</option>
+                <option value="upto2000">INR 0-2000</option>
+                <option value="upto5000">INR 2001-5000</option>
+                <option value="upto10000">INR 5001-10,000</option>
+                <option value="moreThan10000">INR 10,000+</option>
+            </select>
+        </div>
+        <div id="byCountry" class="filterBox">
+            <label for="country">IMPORTED FROM</label><br>
+            <select name="country" id="country">
+                <option value="any">Any Country</option>
+                <option value="uk">Imported from UK</option>
+                <option value="usa">Imported from USA</option>
+                <option value="india">Imported from India</option>
+                <option value="dc">DC Verified</option>
+            </select>
+        </div>
+        <div id="byDelivery" class="filterBox">
+            <label for="rating">RATING</label><br>
+            <select name="rating" id="rating">
+                <option value="any">Any Rating</option>
+                <option value="High-Low">High-Low</option>
+                <option value="Low-High">Low-High</option>
+                <option value="4to5">4+ out of 5</option>
+                <!-- <option value=">5to8Days"></option> -->
+            </select>
+        </div>
+    </div>
     <!-- horizontal line -->
     <div class="hrLine"></div>
     <!-- All product section -->
