--- a/productReview.html
+++ b/productReview.html
@@ -150,9 +150,9 @@
                 </div>
                 <div id="addToCartBtn">
                     <div id="quantityBox">
-                        <p>-</p>
-                        <p>1</p>
-                        <p>+</p>
+                        <p id="subtractQuantity">-</p>
+                        <input type="number" id="showQuantity" style="width: 40px; text-align: center; border: none; outline: none;" value="1">
+                        <p id="addQuantity">+</p>
                     </div>
                     <div id="cartButton">
                         <!-- <button>Add to Cart</button> -->
