--- a/productReview.html
+++ b/productReview.html
@@ -9,11 +9,7 @@
     <title>Clothes</title>
     <link rel="stylesheet" href="CSS/index.css">
     <link rel="stylesheet" href="CSS/footer.css">
-    <!-- <link rel="stylesheet" href="css/cart.css"> -->
-    <!-- <link rel="stylesheet" href="CSS/creataccount.css"> -->
     <link rel="stylesheet" href="CSS/productReview.css">
-    <!-- <link rel="stylesheet" href="css/signin.css"> -->
-    <!-- <link rel="stylesheet" href="css/summerClothes.css"> -->
 </head>
 <body>
     <!-- Nav -->
@@ -93,107 +89,23 @@
 
         <!-- Right Container -->
         <div id="rightContainer">
-            <div id="productName">
-
-            </div>
-            <div id="optionButton">
-                <div class="buttonTitle">
-                    <p>Size</p>
-                </div>
-                <div class="buttonBox">
-                    <div class="buttons">
-                        <img src="https://img.icons8.com/external-becris-lineal-becris/24/000000/external-left-arrow-mintab-for-ios-becris-lineal-becris.png" alt="">
-                    </div>
-                    <div class="buttons">
-                        <p>Medium</p>
-                    </div>
-                    <div class="buttons">
-                        <p>Small</p>
-                    </div>
-                    <div class="buttons">
-                        <p>X-Large</p>
-                    </div>
-                    <div class="buttons">
-                        <p>XX-Large</p>
-                    </div>
-                    <div class="buttons">
-                        <img src="https://img.icons8.com/ios/30/000000/more-than.png" alt="">
-                    </div>
-                </div>
-
-                <div class="buttonTitle">
-                    <p>Color</p>
-                </div>
-                <div class="buttonBox">
-                    <div class="buttons">
-                        <img src="https://img.icons8.com/external-becris-lineal-becris/24/000000/external-left-arrow-mintab-for-ios-becris-lineal-becris.png" alt="">
-                    </div>
-                    <div class="buttons">
-                        <p>Oxford Gray</p>
-                    </div>
-                    <div class="buttons">
-                        <p>Surf the web</p>
-                    </div>
-                    <div class="buttons">
-                        <p>Ultra Marine</p>
-                    </div>
-                    <div class="buttons">
-                        <p>Light Blue</p>
-                    </div>
-                    <div class="buttons">
-                        <img src="https://img.icons8.com/ios/30/000000/more-than.png" alt="">
-                    </div>
-                </div>
-
-                <div class="buttonTitle">
-                    <p>Quantity</p>
-                </div>
-                <div id="addToCartBtn">
-                    <div id="quantityBox">
-                        <p id="subtractQuantity">-</p>
-                        <input type="number" id="showQuantity" style="width: 40px; text-align: center; border: none; outline: none;" value="1">
-                        <p id="addQuantity">+</p>
-                    </div>
-                    <div id="cartButton">
-                        <!-- <button>Add to Cart</button> -->
-                    </div>
-                </div>
-                <p>Get it to INDIA by Oct 13 to Oct 21 with standard delivery.</p>
-            </div>
-            <div>
-                <div id="miscellaneous">
-                    <div class="miscellaneousBox">
-                        <div>
-                            <img src="https://img.icons8.com/external-tulpahn-detailed-outline-tulpahn/30/000000/external-delivery-box-online-shopping-tulpahn-detailed-outline-tulpahn.png"/>
-                        </div>
-                        <div>
-                            <p>Free Delivery to INDIA</p>
-                        </div>
-                    </div>
-                    <div class="miscellaneousBox">
-                        <div>
-                            <img src="https://img.icons8.com/material-outlined/24/000000/rotate.png"/>
-                        </div>
-                        <div>
-                            <p>Easy Returns & Exchanges</p>
-                        </div>
-                    </div>
-                    <div class="miscellaneousBox">
-                        <div>
-                            <img src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/30/000000/external-message-chat-flatart-icons-outline-flatarticons-6.png"/>
-                        </div>
-                        <div>
-                            <p>Ask About This Product</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    
         </div>
     </div>
     <div id="disclaimer">
         <p>Disclaimer: The price shown above includes all applicable taxes and fees. The information provided above is for reference purposes only. Products may go out of stock and delivery estimates may change at any time. Desertcart does not validate any claims made in the product descriptions above. For additional information, please contact the manufacturer or desertcart customer service. While desertcart makes reasonable efforts to only show products available in your country, some items may be cancelled if they are prohibited for import in India. For more details, please visit our Support Page.</p>
     </div>
+    <div id="optionsJS">
 
+    </div>
+    <div id="selectOptions">
+        <div id="options960px">
+            <button onclick="showProductDetails()">Select Options</button>
+        </div>
+        <div id="cartButton" class="cartButtonCss">
+
+        </div>
+    </div>
     <!-- Footer -->
      <!-- footer -->
      <div id="footer">
@@ -298,9 +210,78 @@
     </div>
 </body>
 </html>
+<script type="module">
+    import {runCode} from "./javaScript/productReview.js";
+    import {option, rightContainerJs} from "./components/options.js";
+    let screenWidth = window.innerWidth;
+    if(screenWidth >= 961){
+        document.getElementById("cartButton").textContent = null;
+        document.getElementById("selectOptions").style.display = "none";
+        document.getElementById("optionsJS").innerHTML = null;
+        runCode(true)
+    }
+    else{
+        document.getElementById("rightContainer").innerHTML = null;
+        runCode(false);
+    }
+    setInterval(()=>{
+        if(window.innerWidth !== screenWidth){
+            screenWidth = window.innerWidth;
+            scrennFix()
+        }
+    }, 1000)
+    function scrennFix(){
+            if(window.innerWidth < 960){
+                document.getElementById("rightContainer").innerHTML = null;
+                document.getElementById("optionsJS").style.display = "none";
+                document.getElementById("selectOptions").style.display = "flex";
+                runCode(false);
+            }
+            if(window.innerWidth >= 961) {
+                document.getElementById("cartButton").textContent = null;
+                document.getElementById("selectOptions").style.display = "none";
+                document.getElementById("optionsJS").innerHTML = null;
+                runCode(true);
+            }
+    }
+</script>
 
+<script>
+    function showProductDetails(){
+        document.getElementById("optionsJS").style.display = "inline";
+        document.getElementById("addQuantity").addEventListener("click", addQuantity);
+        document.getElementById("subtractQuantity").addEventListener("click", subtractQuantity);
+    }
+    let currentPro = JSON.parse(localStorage.getItem("disertCurrentItem"));
+    function subtractQuantity(){
+        let curQuant = document.getElementById("showQuantity");
+        let temp = Number(curQuant.value);
+        if(temp < 2){
+            return false;
+        }
+        curQuant.value = temp - 1;
+        currentPro[0].quantity = temp - 1;  
+        currentPro[0].price =  String((temp - 1) * (currentPro[0].itemPrice));
+        console.log(typeof(currentPro[0].price), currentPro[0].price);
+        localStorage.setItem("disertCurrentItem", JSON.stringify(currentPro));
+        document.getElementById("currentPrice").textContent = "Add to Cart " + "₹ " + currentPro[0].price[0] + "," + currentPro[0].price.substring(1,  currentPro[0].price.length);
+    }
+
+    function addQuantity(){
+        let curQuant = document.getElementById("showQuantity");
+        let temp = Number(curQuant.value);
+        if(temp > 9){
+            return false;
+        }
+        curQuant.value = temp + 1;
+        currentPro[0].quantity = temp + 1;
+        currentPro[0].price =  String((temp + 1) * (currentPro[0].itemPrice));
+        console.log(typeof(currentPro[0].price), currentPro[0].price);
+        localStorage.setItem("disertCurrentItem", JSON.stringify(currentPro));
+        document.getElementById("currentPrice").textContent = "Add to Cart " + "₹ " + currentPro[0].price[0] + "," + currentPro[0].price.substring(1,  currentPro[0].price.length);
+    }
+</script>
 <script src="javaScript/index.js"></script>
 <script src="javaScript/cart.js"></script>
 <script src="javaScript/creataccount.js"></script>
-<script src="javaScript/productReview.js"></script>
 <script src="javaScript/summerClothes.js"></script>
