--- a/perfumeMenAndWomen.html
+++ b/perfumeMenAndWomen.html
@@ -1,13 +1,14 @@
+<!-- Vikas Kumar - fw12_132 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfumes</title>
-    <link rel="stylesheet" href="CSS/summerClothes.css">
+    <title>Online Summer Clothes For Men & Women Product Shoping Store In India | ...</title>
     <link rel="stylesheet" href="CSS/index.css">
     <link rel="stylesheet" href="CSS/footer.css">
+    <link rel="stylesheet" href="CSS/summerClothes.css">
 </head>
 <body>
     <!-- nav -->
@@ -36,7 +37,7 @@
         <div id="creatAc">
             <button onclick="creatAccount()"> Or Creat an Account</button>
         </div>
-        <div>
+        <div id="navCart">
             <img src="https://img.icons8.com/ios/48/000000/shopping-cart.png" class="headerIcon" onclick="goToCart()" id="cart">
         </div>
     </div>
@@ -69,15 +70,15 @@
                 <option value="High-Low">High-Low</option>
                 <option value="Low-High">Low-High</option>
                 <option value="4to5">4+ out of 5</option>
-                <!-- <option value=">5to8Days"></option> -->
             </select>
         </div>
     </div>
+
     <!-- horizontal line -->
     <div class="hrLine"></div>
     <!-- All product section -->
     <div class="sectionHead">
-        <h1>Online Perfumes For Him Shopping Store</h1>
+        <h1>Online Summer Clothes For Men Shopping Store</h1>
     </div>
     <div class="globalProducts" id="menContainer">
         
@@ -87,16 +88,16 @@
     <div class="hrLine"></div>
     <!-- All product section -->
     <div class="sectionHead">
-        <h1>Online Perfumes For Her Shopping Store</h1>
+        <h1>Online Summer Dresses For Women Shopping Store</h1>
     </div>
     <div class="globalProducts" id="womenContainer">
         
     </div>
      <!-- horizontal line -->
      <div class="hrLine"></div>
-     <!-- Footer -->
+
       <!-- footer -->
-    <div id="footer">
+    <div id="footer" style="margin-top: 55px;">
         <!-- Top horizontal box -->
         <div id="footerTopBox">
             <div class="childTopFooter">
@@ -199,9 +200,9 @@
 </body>
 </html>
 
+<!-- Java_Script_Files -->
 <script src="javaScript/perfumeMenAndWomen.js"></script>
 <script src="javaScript/index.js"></script>
 <script src="javaScript/cart.js"></script>
 <script src="javaScript/creataccount.js"></script>
 <script src="javaScript/productReview.js"></script>
-<script src="javaScript/summerClothes.js"></script>
