--- a/productReview.html
+++ b/productReview.html
@@ -38,7 +38,7 @@
         <div id="creatAc">
             <button onclick="creatAccount()"> Or Creat an Account</button>
         </div>
-        <div>
+        <div id="navCart">
             <img src="https://img.icons8.com/ios/48/000000/shopping-cart.png" class="headerIcon" onclick="goToCart()" id="cart">
         </div>
     </div>
@@ -281,7 +281,7 @@
         document.getElementById("currentPrice").textContent = "Add to Cart " + "₹ " + currentPro[0].price[0] + "," + currentPro[0].price.substring(1,  currentPro[0].price.length);
     }
 </script>
-<script src="javaScript/index.js"></script>
-<script src="javaScript/cart.js"></script>
-<script src="javaScript/creataccount.js"></script>
-<script src="javaScript/summerClothes.js"></script>
+<script src="./javaScript/index.js"></script>
+<script src="./javaScript/cart.js"></script>
+<script src="./javaScript/creataccount.js"></script>
+<script src="./javaScript/summerClothes.js"></script>
