--- a/summerClothes.html
+++ b/summerClothes.html
@@ -37,7 +37,7 @@
         <div id="creatAc">
             <button onclick="creatAccount()"> Or Creat an Account</button>
         </div>
-        <div>
+        <div id="navCart">
             <img src="https://img.icons8.com/ios/48/000000/shopping-cart.png" class="headerIcon" onclick="goToCart()" id="cart">
         </div>
     </div>
