--- a/productReview.html
+++ b/productReview.html
@@ -282,7 +282,7 @@
         document.getElementById("currentPrice").textContent = "Add to Cart " + "₹ " + currentPro[0].price[0] + "," + currentPro[0].price.substring(1,  currentPro[0].price.length);
     }
 </script>
-<script src="javaScript/index.js"></script>
+<!-- <script src="javaScript/index.js"></script> -->
 <script src="javaScript/cart.js"></script>
 <script src="javaScript/creataccount.js"></script>
 <script src="javaScript/summerClothes.js"></script>
