--- a/summerClothes.html
+++ b/summerClothes.html
@@ -79,7 +79,7 @@
     <div class="hrLine"></div>
     <!-- All product section -->
     <div class="sectionHead">
-        <h1>Online Summer Clothes For Men Shopping Store</h1>
+        <h1>Online Dresses For Him Shopping Store</h1>
     </div>
     <div class="globalProducts" id="menContainer">
         
@@ -89,7 +89,7 @@
     <div class="hrLine"></div>
     <!-- All product section -->
     <div class="sectionHead">
-        <h1>Online Summer Dresses For Women Shopping Store</h1>
+        <h1>Online Dresses For Her Shopping Store</h1>
     </div>
     <div class="globalProducts" id="womenContainer">
         
@@ -202,8 +202,8 @@
 </html>
 
 <!-- Java_Script_Files -->
-<script src="javaScript/index.js"></script>
 <script src="javaScript/cart.js"></script>
 <script src="javaScript/creataccount.js"></script>
 <script src="javaScript/productReview.js"></script>
 <script src="javaScript/summerClothes.js"></script>
+<script src="javaScript/index.js"></script>
