--- a/perfumeMenAndWomen.html
+++ b/perfumeMenAndWomen.html
@@ -79,7 +79,7 @@
     <div class="hrLine"></div>
     <!-- All product section -->
     <div class="sectionHead">
-        <h1>Online Perfumes Clothes For Him Shopping Store</h1>
+        <h1>Online Perfumes For Him Shopping Store</h1>
     </div>
     <div class="globalProducts" id="menContainer">
         
