--- a/perfumeMenAndWomen.html
+++ b/perfumeMenAndWomen.html
@@ -1,20 +1,13 @@
-<!-- Vikas Kumar - fw12_132 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
     <title>Online Shopping Store in India</title>
     <link rel="stylesheet" href="CSS/summerClothes.css">
-=======
-    <link rel="shortcut icon" href="https://cdn.desertcart.com/images/logo57.png" type="image/x-icon">
-    <title>Online Summer Clothes For Men & Women Product Shoping Store In India | ...</title>
->>>>>>> 60d093331a623b4b6946147a4fa03bf56ca4525a
     <link rel="stylesheet" href="CSS/index.css">
     <link rel="stylesheet" href="CSS/footer.css">
-    <link rel="stylesheet" href="CSS/summerClothes.css">
 </head>
 <body>
     <!-- nav -->
@@ -31,10 +24,7 @@
                 <option value="him">Him</option>
             </select>
         </div>
-        <div id="navSearchBox">
-            <input type="text" placeholder="Search for any product..." name="" id="">
-        </div>
-        <div id="blobalIcon">
+        <div>
             <img src="https://cdn-icons-png.flaticon.com/24/876/876759.png" class="headerIcon" id="lang">
         </div>
         <div id="signIn">
@@ -43,12 +33,12 @@
         <div id="creatAc">
             <button onclick="creatAccount()"> Or Creat an Account</button>
         </div>
-        <div id="navCart">
+        <div>
             <img src="https://img.icons8.com/ios/48/000000/shopping-cart.png" class="headerIcon" onclick="goToCart()" id="cart">
         </div>
     </div>
-    <!-- filter section -->
-    <div id="filter">
+     <!-- filter section -->
+     <div id="filter">
         <div id="byPrice" class="filterBox">
             <label for="price">PRICE</label><br>
             <select name="price" id="price">
@@ -70,12 +60,13 @@
             </select>
         </div>
         <div id="byDelivery" class="filterBox">
-            <label for="rating">RATING</label><br>
-            <select name="rating" id="rating">
-                <option value="any">Any Rating</option>
-                <option value="High-Low">High-Low</option>
-                <option value="Low-High">Low-High</option>
-                <option value="4to5">4+ out of 5</option>
+            <label for="delivery">DELIVERY TIME</label><br>
+            <select name="delivery" id="delivery">
+                <option value="any">Any Price</option>
+                <option value="sameDay">INR 0-2000</option>
+                <option value="2day">INR 2001-5000</option>
+                <option value="3to5Days">INR 5001-10,000</option>
+                <option value=">5to8Days">INR 10,000+</option>
             </select>
         </div>
     </div>
@@ -101,104 +92,97 @@
     </div>
      <!-- horizontal line -->
      <div class="hrLine"></div>
-
-      <!-- footer -->
-    <div id="footer" style="margin-top: 55px;">
-        <!-- Top horizontal box -->
-        <div id="footerTopBox">
-            <div class="childTopFooter">
-                <div id="childTopFooterSUbBx"> 
-                    <h3><a href="">Need Help ?</a></h3>
-                    <p>We'd love to Help you out!</p>
-                    <p>support@desertcart.com</p>
+     <!-- Footer -->
+     <div class="footer">
+        <div class="box">
+            <div class="footer1">
+                <div class="help" >
+                <h3 class="textfotter"><a href="">Need Help ?</a></h3>
+                <p >We'd love to Help you out!
+                    support@desertcart.com</p>
                 </div>
             </div>
-            <div class="childTopFooter">
-                <div>
+            <div class="footer1">
+                <div class="help">
                     <img src="https://img.icons8.com/external-those-icons-lineal-those-icons/128/000000/external-call-mobile-telephone-those-icons-lineal-those-icons.png"/>
                 </div>
-                <div>
-                <h3><a href="">Phone Support</a></h3> 
-                <p >+91XXXXXXXXXX</p>
+                <div class="help" >
+                <h3 class="textfotter"><a href="">Phone Support</a></h3> 
+                <p >123467889</p>
                 </div>
             </div>
-            <div class="childTopFooter">
-                <div>
+            <div class="footer1">
+                <div class="help">
                     <img src="https://cdn-icons-png.flaticon.com/128/1381/1381635.png"/>
                 </div>
-                <div>
-                <h3><a href="">24/7 Live Chat</a></h3>
+                <div class="help" >
+                <h3 class="textfotter"><a href="">Chat Support</a></h3>
                 <p >Chat With Us Anytime</p>
                 </div>
             </div>
-            <div class="childTopFooter">
-                <div>
+            <div class="footer1">
+                <div class="help">
                     <img src="https://cdn-icons-png.flaticon.com/128/739/739286.png"/>
                 </div>
-                <div>
-                <h3><a href="">FAQ</a></h3>
+                <div class="help" >
+                <h3 class="textfotter"><a href="">FAQ</a></h3>
                 <p>Find Your Answer</p>
                 </div>
             </div>
         </div>
-        <!-- secound horizontal box -->
-        <!-- left part -->
-        <div id="footerSecoundBox" >
-            <div class="part" id="part1">
-                <div id="wrapper">
-                    <div class="wrapperA">
-                        <div><p> Track Order</p></div>
-                        <div><p>Contact</p></div>
-                        <div><p>Shipping & Handling</p></div>
-                        <div><p>Returns & Exchanges</p></div>
-                        <div><p> Brands</p></div>
-                        <div><p>Categories </p></div>
-                        <div><p>Payments</p></div>
-                        <div><p> Refer Friend</p></div>
-                        <div><p>Corporate Inquiries</p></div>
-                    </div>
-                    <div class="wrapperB">
-                        <div><p>About us</p></div>
-                        <div><p>Terms</p></div>
-                        <div><p>Privacy</p></div>
-                        <div><p>Careers</p></div>
-                        <div><p> Devlopers</p></div>
-                        <div><p>Desertcart Blog </p></div>
-                        <div><p>Sell on Desertcart</p></div>
-                        <div><p> Desertcart Affiliates</p></div>
-                        <div><p>Ecommerce Fulfillment</p></div>
-                    </div>
-                    <div id="paymentIcon" class="wrapperC">
-                        <div><img src="https://img.icons8.com/cotton/64/000000/mastercard.png"></div>
-                        <div><img src="https://cdn-icons-png.flaticon.com/128/179/179457.png"/></div>
-                        <div><img src="https://cdn-icons-png.flaticon.com/128/888/888871.png"/></div>  
-                    </div>
-                </div>
-                <div id="part1_B">
-                    <div><p>UAE</p></div>
-                    <div><p>Bahrain</p></div>
-                    <div><p>Saudi Arabia</p></div>
-                    <div><p>Kuwit</p></div>
-                    <div><p>India </p></div>
+        <div class="box2" >
+            <div class="footerfold">
+            <div class = "subbox">
+                <div><p> Track Order</p></div>
+                <div><p>Contact</p></div>
+                <div><p>Shipping & Handling</p></div>
+                <div><p>Returns & Exchanges</p></div>
+                <div><p> Brands</p></div>
+                <div><p>Categories </p></div>
+                <div><p>Payments</p></div>
+                <div><p> Refer Friend</p></div>
+                <div><p>Corporate Inquiries</p></div>
+                <div class="icon">
+                    <img src="https://cdn-icons-png.flaticon.com/128/171/171673.png"/>
+                    <img src="https://cdn-icons-png.flaticon.com/128/179/179457.png"/>
+                    <img src="https://cdn-icons-png.flaticon.com/128/888/888871.png"/>
                 </div>
             </div>
-            <div class="part" id="part2">
+            <div class = "subbox">
+                <div><p>About us</p></div>
+                <div><p>Terms</p></div>
+                <div><p>Privacy</p></div>
+                <div><p>Careers</p></div>
+                <div><p> Devlopers</p></div>
+                <div><p>Desertcart Blog </p></div>
+                <div><p>Sell on Desertcart</p></div>
+                <div><p> Desertcart Affiliates</p></div>
+                <div><p>Ecommerce Fulfillment</p></div>
+                <div><p>Conditions</p></div>
+            </div>
+            <div class = "subbox">
+                <div><p>UAE</p></div>
+                <div><p>Bahrain</p></div>
+                <div><p>Saudi Arabia</p></div>
+                <div><p>Oman</p></div>
+                <div><p>Kuwit</p></div>
+                <div><p>India </p></div>
+            </div>
+            </div>
+            <div class="footerfold2">
+                <div id="social">
                 <div>
-                    <div>
-                        <p>Desertcart provides a seamless and secure Shopping platform with 100<br> million+ products from around the globe delivered to your door</p>
-                    </div>
-                    <div id="appStoreIcon">
-                        <a href="https://itunes.apple.com/us/app/desertcart/id1399518358"><img alt="desertcart ios app download" src="https://cdn.desertcart.com/static/media/desertcart-ios-app.8aadfde5.png"></a>
-                        <a href="https://play.google.com/store/apps/details?id=com.desertcartnative"><img   alt="desertcart ios app download" src="https://cdn.desertcart.com/static/media/desertcart-android-app.bc11e461.png"></a>
-                    </div>
-                    <div id="iconsFav">
-                        <div><a href="https://www.facebook.com/desertcart"><img src="https://img.icons8.com/ios/30/000000/facebook-f.png"/></a></div>
-                        <div><a href="https://twitter.com/desertcartmena"><img src="https://img.icons8.com/ios/30/000000/twitter--v1.png"/></a></div>
-                        <div><a href="https://www.instagram.com/desertcart/"><img src="https://img.icons8.com/ios/30/000000/instagram-new.png"/></a></div>
-                    </div>
-                    <div id="copyRoght">
-                        <p>Copyright © 2021 Desertcart.</p>
-                    </div>
+                <p>Desertcart provides a seamless and secure Shopping platform with 100<br> million+ products from around the globe delivered to your door</p>
+                </div>
+                <div>
+                    <a href="https://itunes.apple.com/us/app/desertcart/id1399518358"><img id="icons" alt="desertcart ios app download" src="https://cdn.desertcart.com/static/media/desertcart-ios-app.8aadfde5.png"></a>
+                    <a href="https://play.google.com/store/apps/details?id=com.desertcartnative"><img  id="icons" alt="desertcart ios app download" src="https://cdn.desertcart.com/static/media/desertcart-android-app.bc11e461.png"></a>
+                </div>
+                <div>
+                    <a href="https://www.facebook.com/desertcart"><img alt="desertcart facebook" src="https://cdn-icons-png.flaticon.com/128/1384/1384037.png"></a>
+                    <img  src="https://cdn-icons-png.flaticon.com/128/1384/1384031.png"/>
+                    <img src="https://cdn-icons-png.flaticon.com/128/733/733635.png"/>
+                </div>
                 </div>
             </div>
         </div>
@@ -206,9 +190,9 @@
 </body>
 </html>
 
-<!-- Java_Script_Files -->
 <script src="javaScript/perfumeMenAndWomen.js"></script>
+<script src="javaScript/index.js"></script>
 <script src="javaScript/cart.js"></script>
 <script src="javaScript/creataccount.js"></script>
 <script src="javaScript/productReview.js"></script>
-<script src="javaScript/index.js"></script>
+<script src="javaScript/summerClothes.js"></script>
