--- a/signinfirst.html
+++ b/signinfirst.html
@@ -54,7 +54,7 @@
                 <div>
                     <h5>Want to enter your password insted ?<br> <a href="signin.html">Try our legacy signin</a></h5>
                 </div>
-                <input type="submit" class="btn" value="Login" ></input>
+                <input type="submit" onclick="return validEmail()" class="btn" value="Login" ></input>
             </div> 
         </form>
         <div>
