--- a/creataccount.html
+++ b/creataccount.html
@@ -48,14 +48,14 @@
             <form onsubmit="signup(event)" id="myForm" action="">
             <h1>Create Account</h1>
             <div>
-            <input type="text" id="email" placeholder="Email or Phone" required>
+            <input type="text" id="email" placeholder="Email or Phone"  required>
             <input type="password" id="password" placeholder="Password" required>
             </div>
             <div class="submitbtn">
                 <div>
                     <h5>Want to enter your Password insted ?<br> <a href="signin.html">Try our legacy signin</a></h5>
                 </div>
-                <input type="submit" onclick="return validEmail()" class="btn" value="Sign up" ></input>
+                <input type="submit"  class="btn" value="Sign up" ></input>
             </div> 
         </form>
         <div>
