cart and payment validation implemented

--- a/perfumeMenAndWomen.html
+++ b/perfumeMenAndWomen.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="https://cdn.desertcart.com/images/logo57.png" type="image/x-icon">
     <title>Online Summer Clothes For Men & Women Product Shoping Store In India | ...</title>
-    <link rel="stylesheet" href="CSS/index.css">
-    <link rel="stylesheet" href="CSS/footer.css">
-    <link rel="stylesheet" href="CSS/summerClothes.css">
+    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="stylesheet" href="./styles/summerClothes.css">
 </head>
 <body>
     <!-- nav -->
@@ -202,8 +202,8 @@
 </html>
 
 <!-- Java_Script_Files -->
-<script src="javaScript/perfumeMenAndWomen.js"></script>
-<script src="javaScript/cart.js"></script>
-<script src="javaScript/creataccount.js"></script>
-<script src="javaScript/productReview.js"></script>
-<script src="javaScript/index.js"></script>
+<script src="./scripts/perfumeMenAndWomen.js"></script>
+<script src="./scripts/cart.js"></script>
+<script src="./scripts/creataccount.js"></script>
+<script src="./scripts/productReview.js"></script>
+<script src="./scripts/index.js"></script>
