--- a/cart.html
+++ b/cart.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
     <link rel="shortcut icon" href="https://cdn.desertcart.com/images/logo57.png" type="image/x-icon">
-    <link rel="stylesheet" href="CSS/index.css">
-    <link rel="stylesheet" href="CSS/footer.css">
-    <link rel="stylesheet" href="CSS/cart.css">
+    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="stylesheet" href="./styles/cart.css">
 </head>
 <body>
     <!-- Nav -->
@@ -183,20 +183,33 @@
 </html>
 <script type="module">
     import {paymentBtn, shipping} from "./components/cartPayment.js";
-    import {showProduct, paymentForm, myForm} from "./javaScript/cart.js";
+    import {showProduct, paymentForm, myForm} from "./scripts/cart.js";
     let screenWidth = screen.width;
+    let tempWidth;
     setInterval(() =>{
         if(window.innerWidth !== screenWidth){
             screenWidth = window.innerWidth;
             new Promise((resolve, reject) =>{
-                if(screenWidth < 960){
-                    document.getElementById("cartDetails").innerHTML = null;
-                    document.getElementById("payForm").innerHTML = paymentBtn();
-                    document.getElementById("cnfButton").addEventListener("click", showForm);
-                    return resolve("ok");
+                if(screenWidth < 1020){
+                    if(tempWidth < 1020){
+                        return;
+                    }
+                    else{
+                        tempWidth = screenWidth;
+                        document.getElementById("cartDetails").innerHTML = null;
+                        document.getElementById("payForm").innerHTML = paymentBtn();
+                        document.getElementById("cnfButton").addEventListener("click", showForm);
+                        return resolve("< 960px");
+                    }
                 }
-                if(screenWidth >= 961){
-                    location.reload()
+                else{
+                    if(screenWidth >= 1020 && tempWidth >= 1020)
+                        return;
+                    else
+                        // location.reload()
+                        showProduct();
+                    tempWidth = screenWidth;
+                    return resolve("> 960px");
                 }
             })
             .then((res) => {
@@ -220,7 +233,7 @@
         }
     }
 </script>
-<script src="javaScript/creataccount.js"></script>
-<script src="javaScript/productReview.js"></script>
-<script src="javaScript/summerClothes.js"></script>
-<script src="javaScript/index.js"></script>
+<script src="./scripts/creataccount.js"></script>
+<script src="./scripts/productReview.js"></script>
+<script src="./scripts/summerClothes.js"></script>
+<script src="./scripts/index.js"></script>
