--- a/productReview.html
+++ b/productReview.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clothes</title>
     <link rel="shortcut icon" href="https://cdn.desertcart.com/images/logo57.png" type="image/x-icon">
-    <link rel="stylesheet" href="CSS/index.css">
-    <link rel="stylesheet" href="CSS/footer.css">
-    <link rel="stylesheet" href="CSS/productReview.css">
+    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="stylesheet" href="./styles/productReview.css">
 </head>
 <body>
     <!-- Nav -->
@@ -212,7 +212,7 @@
 </body>
 </html>
 <script type="module">
-    import {runCode} from "./javaScript/productReview.js";
+    import {runCode} from "./scripts/productReview.js";
     import {option, rightContainerJs} from "./components/options.js";
     let screenWidth = window.innerWidth;
     if(screenWidth >= 961){
@@ -282,8 +282,8 @@
         document.getElementById("currentPrice").textContent = "Add to Cart " + "₹ " + currentPro[0].price[0] + "," + currentPro[0].price.substring(1,  currentPro[0].price.length);
     }
 </script>
-<script src="javaScript/productReview.js"></script>
-<script src="javaScript/cart.js"></script>
-<script src="javaScript/creataccount.js"></script>
-<script src="javaScript/summerClothes.js"></script>
-<script src="javaScript/index.js"></script>
+<script type="module" src="./scripts/productReview.js"></script>
+<script src="./scripts/cart.js"></script>
+<script src="./scripts/creataccount.js"></script>
+<script src="./scripts/summerClothes.js"></script>
+<script src="./scripts/index.js"></script>
