file_system_updated

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="https://cdn.desertcart.com/images/logo57.png" type="image/x-icon">
     <title>Online Shopping Store in India</title>
-    <link rel="stylesheet" href="../styles/index.css">
-    <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/footer.css">
 </head>
 
 <body>
@@ -165,8 +165,8 @@
     </div>
 </body>
 </html>
-<script src="../scripts/index.js"></script>
-<script src="../scripts/cart.js"></script>
-<script src="../scripts/creataccount.js"></script>
-<script src="../scripts/productReview.js"></script>
-<script src="../scripts/summerClothes.js"></script>
+<script src="./scripts/index.js"></script>
+<script src="./scripts/cart.js"></script>
+<script src="./scripts/creataccount.js"></script>
+<script src="./scripts/productReview.js"></script>
+<script src="/scripts/summerClothes.js"></script>
