signinToIndex_redirecting_fixed

--- a/pages/signin.html
+++ b/pages/signin.html
@@ -44,7 +44,7 @@
     <!-- signin form -->
     <div class="signi">
          <div>        
-        <form onsubmit="signine(event)" id="myForm" action="">
+        <form onsubmit="signin(event)" id="myForm" action="">
             <img src="https://cdn.desertcart.com/static/media/logo.5821c90d.png"/>
             <h1>Sign In</h1>
             <div>
